--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div class="Container">
-    <h1>wow</h1>
+<div class="ContainerMain">
+    <h1 class="header"></h1>
 </div>
 <script src="script.js"></script>
